--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
    
 <nav>
       <ul>
-          <li><a href="home.html">Home</a>
+          <li><a href="index.html">Home</a>
           <li><a href="E-learning.html">E-learning</a>                
           <li><a href="E-library.html">E-library</a>
           <li><a href="school clubs.html">School Clubs</a>
           <li><a href="branches.html">Branches</a>
-          <li><a href="Admission.html">Admission</a>
+          <li><a href="admission.html">Admission</a>
           <li><a href="about.html">About</a>
         </ul>
     </nav>
