--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         <img src="instagram icon.png" alt="Instagram Icon">
       </a>
       <a href="https://t.me/SoT_Bole" target="_blank" rel="noopener noreferrer" aria-label="Telegram">
-        <img src="Telegram icon.png" alt="Telegram Icon">
+        <img src="telegram icon.png" alt="Telegram Icon">
       </a>
       <a href="https://youtube.com/@boleschooloftomorrow?si=mt5oa9iqBQ8wpgsP" target="_blank" rel="noopener noreferrer" aria-label="YouTube">
-        <img src="YouTube icon.png" alt="YouTube Icon">
+        <img src="youtube icon.png" alt="YouTube Icon">
       </a>
       <a href="https://et.linkedin.com/company/school-of-tomorrow-ethiopia" target="_blank" rel="noopener noreferrer" aria-label="Linkedin">
         <img src="linkedin icon.png" alt="Linkedin Icon">
